--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,14 +3,12 @@
 </div>
 
 <div class="sidebar well">
-    <h1>Recent Posts</h1>
+    <h1>SLEPs</h1>
     <ul>
-        {% for post in site.posts limit:5 %}
-          <li><a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
+        {% for page in site.pages%}
+        {% if page.dir contains 'slep'} %}
+          <li><a href="{{ site.baseurl}}{ page.url }}">{{ page.title }}</a></li>
+        {% endif %}
         {% endfor %}
     </ul>
-</div>
-
-<div class="sidebar well">
-{% include links-list.html %}
 </div>
