move readme around

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
     <ul>
         {% for page in site.pages%}
         {% if page.dir contains 'slep'} %}
-          <li><a href="{{ site.baseurl}}{ page.url }}">{{ page.title }}</a></li>
+        <li><a href="{{ site.baseurl}}{{ page.url }}">{{ page.title }}</a></li>
         {% endif %}
         {% endfor %}
     </ul>
